More files, hooked up css

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" type="text/css" href="index.css">
-        <link rel="stylesheet" href="short.css" media="screen and (max-width: 500px)">
+        <link rel="stylesheet" type="text/css" href="css/index.css">
+        <link rel="stylesheet" href="css/short.css" media="screen and (max-width: 600px)">
         <title>Here is the title</title>        
     </head>
 <body >
@@ -32,22 +32,25 @@
     </form>
     <div class="flexparent">
         <div class="flexchild">
-            <a href="home.html">Home</a>
+            <a href="home.html">About</a>
         </div>
         <div class="flexchild">
-            <a href="estore.html">E-store</a>
+            <a href="estore.html">Play Game</a>
         </div>
         <div class="flexchild">
-            <a href="products.html">Products</a>
+            <a href="products.html">Scores</a>
         </div>
         <div class="flexchild">
             <a href="health.html">Health</a>
         </div>
         <div class="flexchild">
-            <a href="aboutus.html">About Us</a></div>
+            <a href="aboutus.html">Jokes</a></div>
+    </div>
+    <div class="joke">
+        <input type="button" id="getJoke" value="Tell me a joke!">
     </div>
     <div>
-        <img class="images" src="cat.jpg" alt="Cat!" width="400" height="400">
+        <img class="images" src="images/cat.jpg" alt="Cat!" width="400" height="400">
     </div>
 </body>
 </html>
